# flog

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_EN.md  install.sh
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CODING_STYLE.md  CONTRIBUTING.md  MODULES.md  PROTOCOL.md  UI_FRAMEWORK_BOUNDARY.md
docs/superpowers/: README.md  ai-long-workflow-methodology.md  retrospective-flog.md
flog_dart/: .pubignore  CHANGELOG.md  README.md  pubspec.yaml
flog_dart/.dart_tool/: package_config.json  package_graph.json
flog_dart/example/: example.dart
flog_dart/lib/: flog_dart.dart
flog_dart/test/: flog_dio_sse_test.dart  flog_dio_test.dart  flog_http_interceptor_test.dart  flog_library_test.dart  flog_mock_interceptor_test.dart  flog_net_test.dart  flog_server_test.dart  flog_sse_parser_test.dart  flog_store_test.dart  flog_web_socket_connect_test.dart  flog_web_socket_test.dart  lifecycle_restart_policy_test.dart
flog_logger/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
flog_logger/.dart_tool/: package_config.json  package_graph.json
flog_logger/example/: example.dart
flog_logger/lib/: flog_dart.dart  flog_logger.dart
src/: app.rs  app_tests.rs  cli.rs  event.rs  lib.rs  main.rs  main_tests.rs  replay.rs  session.rs  session_tests.rs
tests/: characterization_app_state.rs  characterization_bugs.rs  characterization_event_keys.rs  characterization_event_mouse.rs  characterization_input.rs  characterization_ui_046_crlf_bleed.rs  characterization_ui_047_json_interactive.rs  characterization_ui_logs.rs  characterization_ui_network.rs  characterization_ui_source_select_help.rs  forbidden_patterns_test.rs  install_script_test.rs  ws_connect_test.rs  ws_connect_test2.rs  ws_connect_test3.rs  ws_server_test_direct.rs  ws_timestamp_test.rs
(+313 files in other folders)
