[package]
name = "flog"
version = "0.3.0"
edition = "2021"
description = "Flutter Log Viewer — see your logs, finally."
license = "MIT"
keywords = ["flutter", "log", "tui", "android", "ios"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-util", "io-std", "process", "time", "macros"] }
regex = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
unicode-width = "0.2"
toml = "0.8"
dirs = "6"
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = { version = "0.26", features = ["connect"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
plist = "1"
